force-app/main/default/objects/Empleados_Temporales__c/Empleados_Temporales__c.object-meta.xml
<CustomObject>
    <label>Empleados Temporales</label>
    <nameField>
        <label>Nombre de Empleados Temporales</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empleados Temporales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>