force-app/main/default/objects/Empleados_Temporales__c/fields/empleado__c.field-meta.xml
<CustomField>
    <fullName>empleado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empleado_Temporal</label>
    <referenceTo>Empleado_Temporal__c</referenceTo>
    <relationshipName>Empleados_Temporales</relationshipName>
    <type>Lookup</type>
</CustomField>