force-app/main/default/objects/Empleados_Temporales__c/fields/Estado_Civil__c.field-meta.xml
<CustomField>
    <fullName>Estado_Civil__c</fullName>
    <label>Estado Civil</label>
    <length>20</length>
    <type>Text</type>
</CustomField>