force-app/main/default/objects/Empleados_Temporales__c/fields/Genero__c.field-meta.xml
<CustomField>
    <fullName>Genero__c</fullName>
    <label>Genero</label>
    <length>10</length>
    <type>Text</type>
</CustomField>