force-app/main/default/objects/Empleados_Temporales__c/fields/Identidad__c.field-meta.xml
<CustomField>
    <fullName>Identidad__c</fullName>
    <label>Identidad</label>
    <length>80</length>
    <type>Text</type>
</CustomField>