force-app/main/default/objects/Empleados_Temporales__c/fields/Primer_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Primer_Apellido__c</fullName>
    <label>Primer_Apellido</label>
    <length>80</length>
    <type>Text</type>
</CustomField>