force-app/main/default/objects/Empleados_Temporales__c/fields/Primer_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Primer_Nombre__c</fullName>
    <label>Primer_Nombre</label>
    <length>80</length>
    <type>Text</type>
</CustomField>