force-app/main/default/objects/Empleados_Temporales__c/fields/Segundo_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Apellido__c</fullName>
    <label>Segundo_Apellido</label>
    <length>80</length>
    <type>Text</type>
</CustomField>