force-app/main/default/objects/Empleados_Temporales__c/fields/Segundo_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Nombre__c</fullName>
    <label>Segundo_Nombre</label>
    <length>80</length>
    <type>Text</type>
</CustomField>