force-app/main/default/objects/Empleados_Temporales__c/fields/Tipo_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Identificacion__c</fullName>
    <label>Tipo Identificación</label>
    <length>30</length>
    <type>Text</type>
</CustomField>